--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@react-navigation/stack": "^6.1.1",
     "react": "17.0.2",
     "react-native": "0.67.2",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.2",
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "^3.4.1",
-    "react-native-screens": "^3.12.0"
+    "react-native-screens": "^3.12.0",
+    "react-native-vector-icons": "^9.1.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
