--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/stack": "^6.1.1",
+    "ansi-regex": "^6.0.1",
+    "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-elements": "^3.4.2",
@@ -20,6 +23,7 @@
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.12.0",
     "react-native-vector-icons": "^9.1.0",
+    "react-navigation": "^4.4.4",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
@@ -30,6 +34,7 @@
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
+    "react-devtools-core": "^4.23.0",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
