--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/stack": "^6.1.1",
     "ansi-regex": "^6.0.1",
     "formik": "^2.2.9",
@@ -24,7 +25,11 @@
     "react-native-screens": "^3.12.0",
     "react-native-vector-icons": "^9.1.0",
     "react-navigation": "^4.4.4",
-    "styled-components": "^5.3.3"
+    "react-redux": "^7.2.6",
+    "realm": "^10.13.0",
+    "redux": "^4.1.2",
+    "styled-components": "^5.3.3",
+    "yup": "^0.28.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
