--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-google-signin/google-signin": "^7.1.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/stack": "^6.1.1",
     "ansi-regex": "^6.0.1",
     "formik": "^2.2.9",
     "react": "17.0.2",
-    "react-native": "0.67.2",
+    "react-native": "^0.67.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.2",
     "react-native-reanimated": "^2.4.1",
