--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+// apply plugin: 'com.android.application'
+// android {
+//     compileSdkVersion 30
+//     buildToolsVersion '27.0.3'
+//     defaultConfig {
+//         applicationId "com.example.abc.test"
+//         minSdkVersion 21
+//         targetSdkVersion 30
+//         versionCode 1
+//         versionName "1.0"
+//         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+//     }
+//     buildTypes {
+//         release {
+//             minifyEnabled false
+//             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//         }
+//     }
+// }
 buildscript {
     ext {
         buildToolsVersion = "29.0.2"
@@ -7,6 +25,7 @@ buildscript {
         compileSdkVersion = 30
         targetSdkVersion = 30
         ndkVersion = "21.4.7075529"
+        googlePlayServicesVersion = "17.0.0"
     }
     repositories {
         google()
@@ -14,6 +33,7 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:4.2.2")
+        // implementation 'com.google.android.gms:play-services-auth:20.1.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
