--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'changelayout'
+
+include ':react-native-google-signin', ':app'
 include ':realm'
 project(':realm').projectDir = new File(rootProject.projectDir, '../node_modules/realm/react-native/android')
 include ':react-native-vector-icons'
